Fix to styling purchased addons styling on mobile

--- a/src/targets/meandall/styles/views/reservation.less
+++ b/src/targets/meandall/styles/views/reservation.less
@@ -737,6 +737,14 @@ reservation-hotel-details {
       h2 {
         font-size:@heading-2-size;
         color:@c-primary;
+        .viewport-mobile & {
+          color:@c-secondary;
+        }
+      }
+      p {
+        .viewport-mobile & {
+          color:@c-secondary;
+        }
       }
     }
   }
